# dill

./: .gitignore  .gitmodules  main.py  pyproject.toml
src/dillm/: __init__.py  api.py  cli.py  db.py  parser.py  server.py
src/dillm/templates/: index.html  results.html
test/files/: sp.h
test/fixtures/: math.c  util.c
test/rewrites/sp_io_from_file/: original.h  rewrite.h
test/rewrites/sp_mem_arena/: original.h  prompt.md  rewrite.h
